fixed some issues and added some snippets

--- a/vote/Cargo.toml
+++ b/vote/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "ping-pong"
-version = "0.0.2"
-authors = ["Bruda Claudiu-Marcel <claudiu725@yahoo.com>"]
-edition = "2018"
+name = "vote"
+version = "0.0.1"
+authors = ["Benoit Frauly <benoit.frauly@outlook.com>"]
+edition = "2021"
 publish = false
 
 [lib]
-path = "src/ping_pong.rs"
+path = "src/lib.rs"
 [dependencies.multiversx-sc]
 version = "0.39.5"
 
